@startuml
'https://plantuml.com/class-diagram

class Main
class Game

package "util"{
class TextUI
class FileIO
}
package "model"{
class Player
class Account
class CardDeck
}
class Dice
class Board
class Field
class Property {
    + String toString()
    + String onLand(Player p)
    + String onAccept(Player p)
    + String onReject(Player p)
}
class Consequence
class Business
class Plot {
    + String onLand(Player p)
}
class Prison
class Tax
class Parking
class Start
class Chance
class ShippingLine
class Brewery



Main *-- Game
Game *-- TextUI
Game *-- FileIO
Game *-- Player
Player *-- Account
Game *--Board
Board *-- Dice
Board *-- Field
Board *-- CardDeck
Field <|-- Property
Field <|-- Consequence
Property <|-- Business
Property <|-- Plot
Business <|-- ShippingLine
Business <|-- Brewery
Consequence <|-- Prison
Consequence <|-- Tax
Consequence <|-- Parking
Consequence <|-- Start : is - a
Consequence <|-- Chance


Main : + static void main(string [] args)


Player : -int id
Player  : -String name
Player  : -Account account
Player  : -{static} int counter
Player  : +Player(String name)
Player  : +int getId()
Player  : +String getName()
Player  : +String toString()
Player  : +int getBalance()
Player  : +int updatePosition(int diceValue)
Player  : +void recievePayment(int amount)


Account : - int balance
Account : + Account()
Account : + int getBalance()
Account : + void setBalance(int amount)
Account : + void updateBalance(int amount)

Game : - ArrayList<Player> players
Game : - int maxPlayers
Game : - TextUI ui
Game : - FileIO io
Game : - Player currentplayer
Game : + Game(int maxPlayers, int minPlayers)
Game : - void registerPlayer(String name, int amount)
Game : + void setup()
Game : - void runPlayerSetupDialog();
Game : - void runGameLoop()
Game : - void throwAndMove()
Game : - void endGame()
Game : - void displayPlayers()
Game : - Player getPlayer(int i)
Game : - ArrayList<Player> getPlayers()

TextUI : + String getInput(String msg)
TextUI : - Scanner scanner
TextUI : + void displayMessage(String msg)

FileIO : - Scanner scanner
FileIO : - File file
FileIO : + readGameData(String path)
FileIO : + void saveData(String path, ArrayList<Player> players)
FileIO : + String[] readBoardData(String path)

Field : - String label
Field : - int ID
Field : - int cost
Field : - int income
Field : - String option
Field : + Field(ID, label, cost, income)
Field : + String toString()
Field : + String onLand(Player p)
Field : + String processResponse(Player p)
Field : # String onAccept(Player p)
Field : # String onReject(Player p)


Board : - Field[] fields
Board : - CardDeck cardDeck
Board : + Board(String [] fields, String [] cards])
Board : - void createFields(String [] data)
Board : + Field getField(int id)

CardDeck : - String[] carddata
CardDeck : + CardDeck
CardDeck : + String getNext()

@enduml